# morphogen-av

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  INSTRUCTIONS.md  LICENSE  Package.swift  README.md  STATUS.md
crates/morphogen-cli/: Cargo.toml
crates/morphogen-cli/src/: args.rs  audio.rs  chain.rs  composition.rs  error.rs  imaging.rs  main.rs  modulate.rs  project.rs  queue.rs  render.rs  showcase.rs
crates/morphogen-cli/tests/: smoke.rs
docs/: ARCHITECTURE.md  AUDIO_PIPELINE.md  AUDIO_VIDEO_ROUTE_MILESTONE.md  BACKLOG.md  CACHE_FORMATS.md  CASCADE_COLLAGE_MILESTONE.md  CODEX_TASKS.md  COLOUR_PIPELINE_MILESTONE.md  COMPOSITION_MILESTONE.md  CONVOLUTIONAL_BLEND_MILESTONE.md  DATAMOSH_MILESTONE.md  DEFERRED_WORK_HANDOFF.md  EFFECTS_ROADMAP.md  EFFECT_CHAIN_MILESTONE.md  FLOW_FEEDBACK_MILESTONE.md  GLITCH_SUITE_MILESTONE.md  GRANULAR_MOSAIC_MILESTONE.md  LFO_MODULATION_MILESTONE.md  MAC_BACKEND_PLAN.md  MEDIA_PIPELINE.md  METAL_RENDERING.md  MIDI_MODULATION_MILESTONE.md  MODULATION_MATRIX_MILESTONE.md  MORPHOGENESIS_EXPANSION_HANDOFF.md  MORPHOGENESIS_FHN_MILESTONE.md  MORPHOGENESIS_FIELD_VIEW_MILESTONE.md  MORPHOGENESIS_LENIA_MILESTONE.md  MORPHOGENESIS_LIVE_COUPLING_MILESTONE.md  MORPHOGENESIS_MILESTONE.md  MORPHOGENESIS_RELIEF_SHADING_MILESTONE.md  OSCILLATOR_BANK_MILESTONE.md  PERFORMANCE_CAPTURE_MILESTONE.md  PHASE_VOCODER_MILESTONE.md  PREVIEW_LOOP_MILESTONE.md  QUICK_PREVIEW_RESTORE_MILESTONE.md  RECOMMENDATIONS.md  REFERENCE.md  RETRO_STATIC_MILESTONE.md  RUTT_ETRA_METAL_FIXUP.md  RUTT_ETRA_METAL_MILESTONE.md  (+7 more)
scripts/: check-shaders.sh  (+6 more)
(+160 files in other folders)
