[workspace]
members = [
  "crates/morphogen-core",
  "crates/morphogen-media",
  "crates/morphogen-audio",
  "crates/morphogen-render",
  "crates/morphogen-metal",
  "crates/morphogen-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.78"

[workspace.dependencies]
assert_cmd = "2"
clap = { version = "4", features = ["derive"] }
hound = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
predicates = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
