[package]
name = "morphogen-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "morphogen"
path = "src/main.rs"

[dependencies]
clap.workspace = true
image.workspace = true
morphogen-core = { path = "../morphogen-core" }
morphogen-audio = { path = "../morphogen-audio" }
morphogen-media = { path = "../morphogen-media" }
morphogen-render = { path = "../morphogen-render" }
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
morphogen-metal = { path = "../morphogen-metal" }

[dev-dependencies]
assert_cmd.workspace = true
hound.workspace = true
predicates.workspace = true
tempfile.workspace = true
